WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134682
[Cocoa] Assertion failure in NavigationState::LoaderClient::didStartProvisionalLoadForFrame (navigationID) when navigating through the page cache
https://bugs.webkit.org/show_bug.cgi?id=134682
Summary
[Cocoa] Assertion failure in NavigationState::LoaderClient::didStartProvision...
mitz
Reported
2014-07-07 09:05:11 PDT
[Cocoa] Assertion failure in NavigationState::LoaderClient::didStartProvisionalLoadForFrame (navigationID) when navigating through the page cache
Attachments
Remove some assertions added in r170660
(6.07 KB, patch)
2014-07-07 09:07 PDT
,
mitz
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-07-07 09:07:25 PDT
Created
attachment 234490
[details]
Remove some assertions added in
r170660
mitz
Comment 2
2014-07-07 09:21:39 PDT
Fixed in <
http://trac.webkit.org/r170845
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug